--- a/Lab-9_Responsive_Webpage_Beta/index.html
+++ b/Lab-9_Responsive_Webpage_Beta/index.html
@@ -47,18 +47,16 @@
    </section>
    <section class="footermyaccount">
         <p class="footertitle">My Account<p>
-	<p class="footertitle">
 	<ul class="footerlist">
 		<li >Sign Up <li>
 		<li >Sign Up <li>
-		<li >Sign Up <li>
-				</ul>
+		<li >Sign Up <li></ul>
    </section>
 
    <section class="footerfollow">
    <p class="footertitle">Follow Us</p>
-   <div class="socialmedia"><img class="socialmedia" src="images/Chat_icon.png">
-   <img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></div>
+   <div class="socialmedia"><a href="" ><img class="socialmedia" src="images/Chat_icon.png"></a>
+	   <a href="" ><img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></a></div>
    </section>
       </footer>
    </body>
