Project-1 and Lab-10

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -1,21 +1,14 @@
-<!-- Each card includes one image, and my choice of link in the form of the card itself The webpage should have a title centered at the top.
-The header should contain navigation tabs aligned to the left.
-The main content should include:
-An introduction image with a text overlay using position: relative and position: absolute.
-A card section occupying 70% of the screen width, with six cards inside.
-A right column next to the card section, containing two information cards.
-A footer should be included at the bottom with two different text sizes.
- -->
+<!-- Each card includes one image, and my choice of link in the form of the card itself -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>lab 10, Responsive Web Page</title>
-   <link href="desert_page.css" rel=stylesheet>
+   <title>lab 7, Fixed Layout site</title>
+   <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2"><header class="header"><section class="exc8_HeroSection"><div class="excImage1"><div class="text_INFO_1"></div></div><a class="hide_this_c#" href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle"><%=Date() %>Desert Architecture</h1></div></section></header></main>
+   <header class="header"><div class="headerimage"><img src="images/logo-neverland-altar-of-gaming.png" class="headerimage"></div><div><a href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle"><%=Date() %>NeverLand</h1></div></header>
 
    <nav class="nav"><ul class="flexNav"><a href="" rel="noopener noreferrer" class="flexNav">Portals</a></ul><ul class="flexNav"><a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav>
    <main class="maincontainer"><aside><div class="leftblock"><img src="images/galleiria.jpg" class="introImage"></div></aside>
