--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
        	       <a href="Lab-10_UI_Responsive_Webpage_Design/index.html" target="_blank" rel="noopener noreferrer">Lab 10: Responsive Webpage Desgin
             </div>
 	    <div>
+       	       <a href="Project-1/index.html" target="_blank" rel="noopener noreferrer">Project 1</a>
+            </div>
+	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
             </div>
          </ul>
