--- a/Lab-10_UI-Responsive-Webpage-Design/index.html
+++ b/Lab-10_UI-Responsive-Webpage-Design/index.html
@@ -15,7 +15,7 @@ A footer should be included at the bottom with two different text sizes.
    <link href="desert_page.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2"><header class="header"><section class="exc8_HeroSection"><div class="excImage1"><div class="text_INFO_1"></div></div><a class="hide_this_c#" href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle"><%=Date() %>Desert Architecture</h1></div></section></header></main>
+	<main class="imgcontainerv2"><header class="header"><section class="exc8_HeroSection"><div class="excImage1"><div id="nav"><nav class="nav"><ul class="flexNav"><a href="" rel="noopener noreferrer" class="flexNav">Portals</a></ul><ul class="flexNav"><a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav></div></div><a class="hide_this_c#" href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle"><%=Date() %>Desert Architecture</h1></div></section></header></main>
 
    <nav class="nav"><ul class="flexNav"><a href="" rel="noopener noreferrer" class="flexNav">Portals</a></ul><ul class="flexNav"><a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav>
    <main class="maincontainer"><aside><div class="leftblock"><img src="images/galleiria.jpg" class="introImage"></div></aside>
