--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -8,7 +8,7 @@
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-   <header class="header"><div class="headerimage"><img src="images/logo-neverland-altar-of-gaming.png" class="headerimage"></div><div><a href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle"><%=Date() %>Architecture Design</h1></div></header>
+   <header class="header"><div class="headerimage"><img src="images/logo-neverland-altar-of-gaming.png" class="headerimage"></div><div><a href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle">Architecture Design</h1></div></header>
 
    <nav class="nav"><ul class="flexNav"><a href="" rel="noopener noreferrer" class="flexNav">Portals</a></ul><ul class="flexNav"><a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav>
    <main class="maincontainer"><aside><div class="leftblock"><img src="images/galleiria.jpg" class="introImage"></div></aside>
