--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -8,16 +8,31 @@
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-   <header class="header"><div class="headerimage"><img src="images/logo-neverland-altar-of-gaming.png" class="headerimage"></div><div><a href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a><h1 class="headertitle">Architecture Design</h1></div></header>
+   <header class="header">
+      <section class="bgImage">
+	   <div class="headerimage">
+      <h1 class="headertitle">Architecture Design</h1>
+	   </div></section>
+   </header>
 
-   <nav class="nav"><ul class="flexNav"><a href="" rel="noopener noreferrer" class="flexNav">Portals</a></ul><ul class="flexNav"><a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav>
-   <main class="maincontainer"><aside><div class="leftblock"><img src="images/galleiria.jpg" class="introImage"></div></aside>
+   <nav class="nav"><ul class="flexNav">
+  <a href="" rel="noopener noreferrer" class="flexNav">Portals</a>
+   </ul><ul class="flexNav">
+   <a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a></ul><ul class="flexNav"><a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a></ul></nav>
+   <main class="maincontainer"><aside><div class="leftblock"><img src="images/the-desert-relics-karim-plus-elias_3.jpg
+" class="introImage"></div></aside>
     <div class="rightblock">
-	    <section class="infosection"><em id="parag">NeverLand .. It's some game studio.</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine<section></div>
-   </main><h2 href="#" class="sectionTitle">Portals</h2><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="https://en.wikipedia.org/wiki/Apache_HTTP_Server" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link1" class="nvrlnd"><h2 class="linkFont">Apache</h2></a></div></section>
+       <section class="infosection"><em id="parag">Inspiration</em><br><p class="msg">Modern architectural works offer an insight to the brilliance of working with the land and integrating designs that create an experience that is unique.  <section></div>
+
+   </main>
+   <h2 href="#" class="sectionTitle">Portals</h2>
+	   <main class="cardscontainer">
+	<section class="card"><div class="cardinfo">
+			<a href="https://en.wikipedia.org/wiki/Apache_HTTP_Server" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link1" class="nvrlnd"><h2 class="linkFont">Apache</h2></a></div></section>
       <section class="card"><div class="cardinfo"><a href="https://gcc.gnu.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link2" class="nvrlnd"><h2 class="linkFont">GCC</h2></a></div></section>
       <section class="card"><div class="cardinfo"><a href="https://github.com/Mag-Aegis" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link3" class="nvrlnd"><h2 class="linkFont">Github</h2></a></div></section></main><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link4" class="nvrlnd"><h2 class="linkFont">Postfix</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link5" class="nvrlnd"><h2 class="linkFont">CPAN</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://libreboot.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link6" class="nvrlnd"><h2 class="linkFont">Libreboot</h2></a></div></section>
    </main>
+
    <footer class="footer">
 	   <p>Email: <a href="mailto:jorge.garib11@student.qcc.cuny.edu">jorge.garib11@student.qcc.cuny.edu</a></p><p class="">Created by Jorge Garib Guillen</p>
      </footer>
