--- a/Lab-10_UI-Responsive-Webpage-Design/index.html
+++ b/Lab-10_UI-Responsive-Webpage-Design/index.html
@@ -34,21 +34,48 @@ A footer should be included at the bottom with two different text sizes.
 						</nav>
 					</div>
 				</div>
-				<a class="hide_this_c#" href="../Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html">class-examples/thistimeLab6</a>
 			</section>
 		</header>
 	</main>
 
 
-   <main class="maincontainer"><aside><div class="leftblock"><img src="images/galleiria.jpg" class="introImage"></div></aside>
+   <main class="maincontainer">
+	   <aside>
+		   <div class="leftblock">
+			   <img src="images/galleiria.jpg" class="introImage">
+		   </div>
+	   </aside>
     <div class="rightblock">
-  <section class="infosection"><em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine SSSSSSSSSSSSEFFFFFFFFFFFFFFFFFFFFFCCCCCCCCCCCCCCC<section></div>
+  
+	    <section class="infosection">
+		    <em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine SSSSSSSSSSSSEFFFFFFFFFFFFFFFFFFFFFCCCCCCCCCCCCCCC</section></div>
    </main><h2 href="#" class="sectionTitle">Portals</h2><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="https://en.wikipedia.org/wiki/Apache_HTTP_Server" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link1" class="nvrlnd"><h2 class="linkFont">Apache</h2></a></div></section>
       <section class="card"><div class="cardinfo"><a href="https://gcc.gnu.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link2" class="nvrlnd"><h2 class="linkFont">GCC</h2></a></div></section>
       <section class="card"><div class="cardinfo"><a href="https://github.com/Mag-Aegis" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link3" class="nvrlnd"><h2 class="linkFont">Github</h2></a></div></section></main><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link4" class="nvrlnd"><h2 class="linkFont">Postfix</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link5" class="nvrlnd"><h2 class="linkFont">CPAN</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://libreboot.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link6" class="nvrlnd"><h2 class="linkFont">Libreboot</h2></a></div></section>
    </main>
+   <main class="maincontainer">
    <footer class="footer">
-	   <p>Email: <a href="mailto:jorge.garib11@student.qcc.cuny.edu">jorge.garib11@student.qcc.cuny.edu</a></p><p class="">Created by Jorge Garib Guillen</p>
+	   <section class="footercustomer">
+		<p class="footertitle">Navigation!
+		<ul class="footerlist">
+		<li >Sign Up <li>
+		<li >Sign Up <li>
+		<li >Sign Up <li></ul>
+  	 </section>
+	<section class="footerfollow">
+		<p class="footertitle">References
+		<ul class="footerlist">
+		<li >Sign Up <li>
+		<li >Sign Up <li>
+		<li >Sign Up <li></ul>
+	</section>
+	<section class="footerfollow">
+		<p class="footertitle">Email</p>
+		<div class="socialmedia"><a href=""><img class="socialmedia" src="images/Chat_icon.png"></a>
+		<a href=""><img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></a></div>
+	<p>Email: <a href="mailto:jorge.garib11@student.qcc.cuny.edu">jorge.garib11@student.qcc.cuny.edu</a></p><p class="">Created by Jorge Garib Guillen</p>
+	</section>
      </footer>
+     </main>
 </body>
 </html>
