--- a/Lab-10_UI-Responsive-Webpage-Design/index.html
+++ b/Lab-10_UI-Responsive-Webpage-Design/index.html
@@ -29,7 +29,7 @@ A footer should be included at the bottom with two different text sizes.
 								<a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a>
+					<a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a>
 							</ul>
 						</nav>
 					</div>
@@ -37,21 +37,48 @@ A footer should be included at the bottom with two different text sizes.
 			</section>
 		</header>
 	</main>
-
-
-   <main class="maincontainer">
+	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock">
-			   <img src="images/galleiria.jpg" class="introImage">
+			   <img src="images/zhongwei-desert-diamond-hotel-shuishi_2.jpg" class="introImage">
 		   </div>
 	   </aside>
-    <div class="rightblock">
-  
-	    <section class="infosection">
-		    <em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine SSSSSSSSSSSSEFFFFFFFFFFFFFFFFFFFFFCCCCCCCCCCCCCCC</section></div>
-   </main><h2 href="#" class="sectionTitle">Portals</h2><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="https://en.wikipedia.org/wiki/Apache_HTTP_Server" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link1" class="nvrlnd"><h2 class="linkFont">Apache</h2></a></div></section>
-      <section class="card"><div class="cardinfo"><a href="https://gcc.gnu.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link2" class="nvrlnd"><h2 class="linkFont">GCC</h2></a></div></section>
-      <section class="card"><div class="cardinfo"><a href="https://github.com/Mag-Aegis" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link3" class="nvrlnd"><h2 class="linkFont">Github</h2></a></div></section></main><main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link4" class="nvrlnd"><h2 class="linkFont">Postfix</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link5" class="nvrlnd"><h2 class="linkFont">CPAN</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://libreboot.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link6" class="nvrlnd"><h2 class="linkFont">Libreboot</h2></a></div></section>
+	   	<div class="rightblock">
+	   		<section class="infosection">
+	      <em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine SSSSSSSSSSSSEFFFFFFFFFFFFFFFFFFFFFCCCCCCCCCCCCCCC</section>
+		</div>
+	</main>
+   <h2 href="#" class="sectionTitle">Portals</h2>
+	<main class="cardscontainer">
+		<section class="card">
+			<div class="cardinfo">
+	<a href="https://en.wikipedia.org/wiki/Apache_HTTP_Server" rel="noopener noreferrer" class="cardlink">
+		<img src="images/logo-neverland-altar-of-gaming.png" alt="Link1" class="nvrlnd">
+	<h2 class="linkFont">Apache</h2>
+	</a>
+			</div>
+		</section>
+		<aside>
+			<div>
+				<p>Hosting webservers is typically done with a service. The many aspects of keeping a domain open with connections live and secure requires a large software repoitaire as seen in webserver scripts and hooks. Entities need connections secure an load balancing facilitates this. Network software is also virtualized. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software.
+				<section class="card">
+					<div class="cardinfo">
+						<a href="https://gcc.gnu.org/" rel="noopener noreferrer" class="cardlink">
+							<img src="images/logo-neverland-altar-of-gaming.png" alt="Link2" class="nvrlnd">
+			   <h2 class="linkFont">GCC</h2>
+						</a>
+					</div>
+				</section>
+				<section class="card">
+	      <div class="cardinfo">
+		      <a href="https://github.com/Mag-Aegis" rel="noopener noreferrer" class="cardlink">
+			      <img src="images/logo-neverland-altar-of-gaming.png" alt="Link3" class="nvrlnd">
+			      <h2 class="linkFont">Github</h2>
+		      </a>
+	      </div>
+      </section>
+	   </main>
+   <main class="cardscontainer"><section class="card"><div class="cardinfo"><a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link4" class="nvrlnd"><h2 class="linkFont">Postfix</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link5" class="nvrlnd"><h2 class="linkFont">CPAN</h2></a></div></section><section class="card"><div class="cardinfo"><a href="https://libreboot.org/" rel="noopener noreferrer" class="cardlink"><img src="images/logo-neverland-altar-of-gaming.png" alt="Link6" class="nvrlnd"><h2 class="linkFont">Libreboot</h2></a></div></section>
    </main>
    <main class="maincontainer">
    <footer class="footer">
