--- a/Project-1/CPAN_sample.html
+++ b/Project-1/CPAN_sample.html
@@ -1,11 +1,3 @@
-<!-- Each card includes one image, and my choice of link in the form of the card itself The webpage should have a title centered at the top.
-The header should contain navigation tabs aligned to the left.
-The main content should include:
-An introduction image with a text overlay using position: relative and position: absolute.
-A card section occupying 70% of the screen width, with six cards inside.
-A right column next to the card section, containing two information cards.
-A footer should be included at the bottom with two different text sizes.
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,19 +14,13 @@ A footer should be included at the bottom with two different text sizes.
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
-								<a href="https://httpd.apache.org" rel="noopener noreferrer" class="flexNav">Apache</a>
+								<a href="" rel="noopener noreferrer" class="flexNav">Portals</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="https://gcc.gnu.org" rel="noopener noreferrer" class="flexNav">GCC</a>
+								<a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="http://www.postfix.org/" class="flexNav">Postfix</a>
-							</ul>
-							<ul class="flexNav">
-					<a href="http://www.metacpan.org/" class="flexNav">CPAN</a>
-							</ul>
-							<ul class="flexNav">
-								<a href="https://libreboot.org" rel="noopener noreferrer" class="flexNav">Libreboot</a>
+					<a href="https://cdn.petzlover.com/petzlover/gallery/img/l/german-shepherd-1858415.jpg" class="flexNav">doge</a>
 							</ul>
 						</nav>
 					</div>
@@ -51,6 +37,7 @@ A footer should be included at the bottom with two different text sizes.
 	   </aside>
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
+				<h2 class="linkFont">GCC</h2>
 				<p class="msg"><em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine</p>
 				<div class="heroinfo"><a href="#" class="herotext">demonstration</a>
 				</div>
@@ -127,7 +114,7 @@ A footer should be included at the bottom with two different text sizes.
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
 				<h2 class="linkFont">Libreboot</h2>
-				<p class="msg">Libreboot is a community-oriented project, with a focus on helping users escape proprietary boot firmware;  in any way you like. When you see Intel talk about their Boot Guard (which prevents coreboot by only letting firmware signed by them be executed) or other vendors imposing similar restrictions, and you hear them talk about “security”, they are only talking about their security, not yours. In the Libreboot project, it is reversed; we see Intel Boot Guard and similar such technologies as an attack on your freedom over your own property (your computer), and so, we make it our mission to help you wrest back such control. Libreboot gives you Free Software that you otherwise can’t get with most other boot firmware, plus faster boot speeds and better security. It’s extremely powerful and configurable for many use cases. Libreboot provides a sleek, fast boot experience for Linux/BSD systems, based on coreboot which is regularly audited and improved.</p>
+				<p class="msg">Libreboot is a community-oriented project, with a focus on helping users escape proprietary boot firmware;  in any way you like. When you see Intel talk about their Boot Guard (which prevents coreboot by only letting firmware signed by them be executed) or other vendors imposing similar restrictions, and you hear them talk about “security”, they are only talking about their security, not yours. In the Libreboot project, it is reversed; we see Intel Boot Guard and similar such technologies as an attack on your freedom over your own property (your computer), and so, we make it our mission to help you wrest back such control. Libreboot gives you Free Software that you otherwise can’t get with most other boot firmware, plus faster boot speeds and better security. It’s extremely powerful and configurable for many use cases. Since it inherits coreboot, it doesn’t have any known backdoors in the code, nor does it contain legacy cruft from the 1980s. Libreboot provides a sleek, fast boot experience for Linux/BSD systems, based on coreboot which is regularly audited and improved.</p>
 				<div class="heroinfo"><a href="#" class="herotext">showcase</a>
 				</div>
 			</section>
