--- a/Project-1/Postfix.html
+++ b/Project-1/Postfix.html
@@ -1,18 +1,10 @@
-<!-- Each card includes one image, and my choice of link in the form of the card itself The webpage should have a title centered at the top.
-The header should contain navigation tabs aligned to the left.
-The main content should include:
-An introduction image with a text overlay using position: relative and position: absolute.
-A card section occupying 70% of the screen width, with six cards inside.
-A right column next to the card section, containing two information cards.
-A footer should be included at the bottom with two different text sizes.
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>lab 10, Responsive Web Page</title>
-   <link href="index.css" rel=stylesheet>
+   <link href="sample.css" rel=stylesheet>
 </head>
 <body>
 	<main class="imgcontainerv2">
@@ -22,19 +14,13 @@ A footer should be included at the bottom with two different text sizes.
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
-								<a href="https://httpd.apache.org" rel="noopener noreferrer" class="flexNav">Apache</a>
+								<a href="" rel="noopener noreferrer" class="flexNav">Portals</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="https://gcc.gnu.org" rel="noopener noreferrer" class="flexNav">GCC</a>
+								<a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="http://www.postfix.org/" class="flexNav">Postfix</a>
-							</ul>
-							<ul class="flexNav">
-					<a href="http://www.metacpan.org/" class="flexNav">CPAN</a>
-							</ul>
-							<ul class="flexNav">
-								<a href="https://libreboot.org" rel="noopener noreferrer" class="flexNav">Libreboot</a>
+					<a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink">Postfix</a>
 							</ul>
 						</nav>
 					</div>
@@ -51,6 +37,7 @@ A footer should be included at the bottom with two different text sizes.
 	   </aside>
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
+				<h2 class="linkFont">GCC</h2>
 				<p class="msg"><em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine</p>
 				<div class="heroinfo"><a href="#" class="herotext">demonstration</a>
 				</div>
@@ -133,8 +120,7 @@ A footer should be included at the bottom with two different text sizes.
 			</section>
 		</div>
 					</main>
-					<!--<a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink"> -->
-					<!-- <a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink">-->
+										<!-- <a href="https://www.cpan.org/" rel="noopener noreferrer" class="cardlink">-->
 					<!--<a href="https://libreboot.org/" rel="noopener noreferrer" class="cardlink">-->
    </main>
    <main class="footercontainer">
